- update dependencies and try to fix hikari cp issue